# polymarket-rs-clob-client

./: Cargo.toml  README.md
.github/workflows/: release-plz.yml
examples/: gamma.rs
examples/clob/: authenticated.rs  builder_authenticated.rs  streaming.rs  unauthenticated.rs
py-clob-client/: Cargo.toml  pyproject.toml
py-clob-client/src/: lib.rs
src/: auth.rs  error.rs  lib.rs
src/clob/: client.rs  mod.rs  order_builder.rs  types.rs
src/clob/types/: mod.rs  response.rs
src/gamma/: client.rs  mod.rs  types.rs
tests/: endpoints.rs  gamma.rs  order.rs
tests/common/: mod.rs
