[package]
name = "polymarket_clob_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymarket_clob_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
polymarket-client-sdk = { path = "../" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.2.1", features = ["signers", "signer-local"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = "0.13"
